[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/sprites/movementJoyStickCentre.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/swimming.png" type="Texture" id=2]
[ext_resource path="res://components/Movement.tscn" type="PackedScene" id=3]
[ext_resource path="res://components/Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/tiles/simpleTilemap.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/hand.png" type="Texture" id=6]
[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=7]
[ext_resource path="res://components/ActionIndicationArea.tscn" type="PackedScene" id=8]
[ext_resource path="res://entities/Entity.gd" type="Script" id=9]
[ext_resource path="res://components/SpriteContainer.gd" type="Script" id=10]
[ext_resource path="res://assets/sprites/crab.png" type="Texture" id=11]
[ext_resource path="res://components/EffectHandler.tscn" type="PackedScene" id=12]
[ext_resource path="res://item/HarvestedItem.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/misc/swoosh.png" type="Texture" id=14]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteContainer/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteContainer/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "attack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteContainer/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 1.4 ), Vector2( 1.3, 0.4 ), Vector2( 1.3, 0.4 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteContainer/Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 0.9 ), Vector2( 1, 1.1 ), Vector2( 1, 1.1 ), Vector2( 1.1, 0.9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteContainer/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "itemSlash"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteContainer/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1.2 ), Vector2( 0.9, 1.2 ), Vector2( 1.2, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteContainer/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "swim"
length = 0.55
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteContainer/Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.2, 0.6 ), Vector2( 0.8, 1.1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteContainer/Sprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.2, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -3 ), Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "swim"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteContainer/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.211908 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.1, 0.9 ), Vector2( 1, 1.1 ), Vector2( 1, 1.1 ) ]
}

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 14 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 14 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 14 )
region = Rect2( 72, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 14 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.0
height = 6.0

[node name="Entity" type="Node2D"]
script = ExtResource( 9 )

[node name="ColliderPreview" type="Sprite" parent="."]
visible = false
position = Vector2( 8, 8 )
texture = SubResource( 6 )

[node name="Health" parent="." instance=ExtResource( 4 )]
position = Vector2( 7, 35 )
scale = Vector2( 0.7, 1.2 )

[node name="Movement" parent="." instance=ExtResource( 3 )]
speed = 95.0
spriteContainerPath = NodePath("../SpriteContainer")

[node name="UsernameLabel" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.682353 )
use_parent_material = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -18.0
margin_right = 70.0
margin_bottom = 2.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 7 )
custom_colors/font_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
text = "name"
align = 1
valign = 1
clip_text = true

[node name="SpriteContainer" type="Node2D" parent="."]
position = Vector2( 8, 16 )
script = ExtResource( 10 )

[node name="MovementAnimator" type="AnimationPlayer" parent="SpriteContainer"]
root_node = NodePath("../..")
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/attack = SubResource( 9 )
anims/idle = SubResource( 3 )
anims/itemSlash = SubResource( 8 )
anims/jump = SubResource( 2 )
anims/swim = SubResource( 5 )

[node name="Shadow" type="Sprite" parent="SpriteContainer"]
modulate = Color( 0, 0, 0, 0.419608 )
position = Vector2( -2.68221e-07, 5.96046e-08 )
scale = Vector2( 0.315789, 0.111111 )
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="SpriteContainer"]
use_parent_material = true
texture = ExtResource( 11 )
centered = false
offset = Vector2( -8, -16 )
region_rect = Rect2( 16, 112, 16, 17 )

[node name="Water" type="Sprite" parent="SpriteContainer"]
visible = false
position = Vector2( 0, -8 )
texture = ExtResource( 2 )

[node name="Item" type="Sprite" parent="SpriteContainer"]
visible = false
position = Vector2( 0, -7 )
z_index = 1
texture = ExtResource( 6 )
offset = Vector2( 0.876659, -16.9711 )
region_rect = Rect2( 128, 128, 16, 16 )

[node name="Slash" type="AnimatedSprite" parent="SpriteContainer/Item"]
position = Vector2( -12, -10 )
z_as_relative = false
frames = SubResource( 14 )
frame = 4

[node name="EffectHandler" parent="." instance=ExtResource( 12 )]

[node name="WorldDetector" type="Area2D" parent="."]
position = Vector2( 8, 16 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldDetector"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="ActionIndicationArea" parent="." instance=ExtResource( 8 )]

[node name="HarvestedItem" parent="." instance=ExtResource( 13 )]

[connection signal="animation_finished" from="SpriteContainer/Item/Slash" to="SpriteContainer" method="_on_Slash_animation_finished"]
[connection signal="body_entered" from="WorldDetector" to="SpriteContainer" method="_on_WorldDetector_body_entered"]
[connection signal="body_exited" from="WorldDetector" to="SpriteContainer" method="_on_WorldDetector_body_exited"]
